[gd_scene load_steps=5 format=3 uid="uid://iuj1t7gk628m"]

[ext_resource type="FontFile" uid="uid://c0crq6o2jh0pm" path="res://assets/font/Teko/static/Teko-SemiBold.ttf" id="1_r67kn"]
[ext_resource type="Script" uid="uid://b04oav3klapnc" path="res://scripts/main_grid.gd" id="2_r67kn"]

[sub_resource type="Theme" id="Theme_8n18e"]
default_font = ExtResource("1_r67kn")
default_font_size = 135

[sub_resource type="CircleShape2D" id="CircleShape2D_tjwpk"]

[node name="tictactoe_mainwindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ttt" type="CanvasLayer" parent="."]

[node name="header" type="ColorRect" parent="ttt"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 1)

[node name="ttt_header" type="Label" parent="ttt/header"]
top_level = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -5.0
offset_top = -21.0
offset_right = -5.0
offset_bottom = 242.0
grow_horizontal = 2
theme = SubResource("Theme_8n18e")
text = "Tic Tac Toe"
horizontal_alignment = 1
vertical_alignment = 1

[node name="turn_display" type="Label" parent="ttt/header"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.0
offset_top = -110.0
offset_right = 118.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1, 0.8)
theme_override_font_sizes/font_size = 38
text = "Player 1 turn"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Gridwindow" type="Control" parent="ttt"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -355.0
offset_top = -369.0
offset_right = -355.0
offset_bottom = 369.0
grow_horizontal = 2
grow_vertical = 2

[node name="horizontalLine1" type="Line2D" parent="ttt/Gridwindow"]
z_index = 1
position = Vector2(342, 243)
points = PackedVector2Array(-332, 26, 376, 26)
width = 5.0
default_color = Color(0.517647, 0.517647, 0.517647, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="horizontalLine2" type="Line2D" parent="ttt/Gridwindow"]
z_index = 1
position = Vector2(331, 518)
points = PackedVector2Array(-323, 25, 388, 25)
width = 5.0
default_color = Color(0.517647, 0.517647, 0.517647, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="horizontalLine3" type="Line2D" parent="ttt/Gridwindow"]
z_index = 1
position = Vector2(331, 518)
points = PackedVector2Array(-323, 25, 388, 25)
width = 5.0
default_color = Color(0.517647, 0.517647, 0.517647, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="verticleline1" type="Line2D" parent="ttt/Gridwindow"]
z_index = 1
position = Vector2(268, 371)
rotation = 1.5708
points = PackedVector2Array(-333, 26, 396.025, 25.6133)
width = 5.0
default_color = Color(0.517647, 0.517647, 0.517647, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="verticleline2" type="Line2D" parent="ttt/Gridwindow"]
z_index = 1
position = Vector2(524, 386)
rotation = 1.5708
points = PackedVector2Array(-339, 26, 392, 26)
width = 5.0
default_color = Color(0.517647, 0.517647, 0.517647, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="grid" type="Control" parent="ttt/Gridwindow"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -641.0
offset_right = -5.0
offset_bottom = -641.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_r67kn")
metadata/_edit_use_anchors_ = true

[node name="gridButton_1" type="TouchScreenButton" parent="ttt/Gridwindow/grid"]
position = Vector2(124, 416)
scale = Vector2(11.4581, 10.9289)
shape = SubResource("CircleShape2D_tjwpk")
passby_press = true
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="gridButton_2" type="TouchScreenButton" parent="ttt/Gridwindow/grid"]
position = Vector2(367, 416)
scale = Vector2(11.4581, 10.9289)
shape = SubResource("CircleShape2D_tjwpk")
passby_press = true
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="gridButton_3" type="TouchScreenButton" parent="ttt/Gridwindow/grid"]
position = Vector2(619, 418)
scale = Vector2(11.4581, 10.9289)
shape = SubResource("CircleShape2D_tjwpk")
passby_press = true
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="gridButton_4" type="TouchScreenButton" parent="ttt/Gridwindow/grid"]
position = Vector2(117, 684)
scale = Vector2(11.4581, 10.9289)
shape = SubResource("CircleShape2D_tjwpk")
passby_press = true
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="gridButton_5" type="TouchScreenButton" parent="ttt/Gridwindow/grid"]
position = Vector2(374, 684)
scale = Vector2(11.4581, 10.9289)
shape = SubResource("CircleShape2D_tjwpk")
passby_press = true
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="gridButton_6" type="TouchScreenButton" parent="ttt/Gridwindow/grid"]
position = Vector2(619, 682)
scale = Vector2(11.4581, 10.9289)
shape = SubResource("CircleShape2D_tjwpk")
passby_press = true
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="gridButton_7" type="TouchScreenButton" parent="ttt/Gridwindow/grid"]
position = Vector2(112, 934)
scale = Vector2(11.4581, 10.9289)
shape = SubResource("CircleShape2D_tjwpk")
passby_press = true
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="gridButton_8" type="TouchScreenButton" parent="ttt/Gridwindow/grid"]
position = Vector2(364, 932)
scale = Vector2(11.4581, 10.9289)
shape = SubResource("CircleShape2D_tjwpk")
passby_press = true
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="gridButton_9" type="TouchScreenButton" parent="ttt/Gridwindow/grid"]
position = Vector2(616, 939)
scale = Vector2(11.4581, 10.9289)
shape = SubResource("CircleShape2D_tjwpk")
passby_press = true
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Label1" type="Label" parent="ttt/Gridwindow/grid"]
offset_left = 78.0
offset_top = 339.0
offset_right = 157.0
offset_bottom = 476.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ttt/Gridwindow/grid"]
offset_left = 335.0
offset_top = 339.0
offset_right = 414.0
offset_bottom = 476.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="ttt/Gridwindow/grid"]
offset_left = 558.0
offset_top = 339.0
offset_right = 637.0
offset_bottom = 476.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="ttt/Gridwindow/grid"]
offset_left = 78.0
offset_top = 585.0
offset_right = 157.0
offset_bottom = 722.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label5" type="Label" parent="ttt/Gridwindow/grid"]
offset_left = 335.0
offset_top = 585.0
offset_right = 414.0
offset_bottom = 722.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label6" type="Label" parent="ttt/Gridwindow/grid"]
offset_left = 558.0
offset_top = 585.0
offset_right = 637.0
offset_bottom = 722.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label7" type="Label" parent="ttt/Gridwindow/grid"]
offset_left = 78.0
offset_top = 849.0
offset_right = 157.0
offset_bottom = 986.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label8" type="Label" parent="ttt/Gridwindow/grid"]
offset_left = 335.0
offset_top = 849.0
offset_right = 414.0
offset_bottom = 986.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label9" type="Label" parent="ttt/Gridwindow/grid"]
offset_left = 558.0
offset_top = 849.0
offset_right = 637.0
offset_bottom = 986.0
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="released" from="ttt/Gridwindow/grid/gridButton_1" to="ttt/Gridwindow/grid" method="_on_grid_button_1_released"]
[connection signal="released" from="ttt/Gridwindow/grid/gridButton_2" to="ttt/Gridwindow/grid" method="_on_grid_button_2_released"]
[connection signal="released" from="ttt/Gridwindow/grid/gridButton_3" to="ttt/Gridwindow/grid" method="_on_grid_button_3_released"]
[connection signal="released" from="ttt/Gridwindow/grid/gridButton_4" to="ttt/Gridwindow/grid" method="_on_grid_button_4_released"]
[connection signal="released" from="ttt/Gridwindow/grid/gridButton_5" to="ttt/Gridwindow/grid" method="_on_grid_button_5_released"]
[connection signal="released" from="ttt/Gridwindow/grid/gridButton_6" to="ttt/Gridwindow/grid" method="_on_grid_button_6_released"]
[connection signal="released" from="ttt/Gridwindow/grid/gridButton_7" to="ttt/Gridwindow/grid" method="_on_grid_button_7_released"]
[connection signal="released" from="ttt/Gridwindow/grid/gridButton_8" to="ttt/Gridwindow/grid" method="_on_grid_button_8_released"]
[connection signal="released" from="ttt/Gridwindow/grid/gridButton_9" to="ttt/Gridwindow/grid" method="_on_grid_button_9_released"]
